Fix gap between apps in app grid.

--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ main {
     width: 100%;
     display: flex;
     justify-content: center;
-    gap: 67px;
+    gap: 63px;
     flex-wrap: wrap;
 }
 
@@ -143,6 +143,7 @@ main {
 
 .section-white {
     background: #F8FFFF;
+    padding: 40px 80px;
 }
 
 .section-grey {
